--- a/duty/templates/duty/enter_head_count.html
+++ b/duty/templates/duty/enter_head_count.html
@@ -170,7 +170,11 @@
                         <a class="nav-link" href="{% url 'report' %}">Reports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        {% else %}
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
