--- a/duty/templates/duty/report_data.html
+++ b/duty/templates/duty/report_data.html
@@ -230,6 +230,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'enter_head_count' %}">Enter Details</a>
                 </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
