--- a/duty/templates/duty/success.html
+++ b/duty/templates/duty/success.html
@@ -94,6 +94,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'report' %}">Reports</a>
                 </li>
+                <li class="nav-item"></li>
+                    <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
